--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
                 <hr>
                 <h1>Support</h1>
                 <ul>
-                    <li><a href="#">Edit Profile</a></li>
-                    <li><a href="#">Saved Address</a></li>
-                    <li><a href="#">Saved Cards & Wallet</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Need Help</a></li>
+                    <li><a href="#">Guide</a></li>
                     <li><a href="#">Select Language</a></li>
                 </ul>
             </div>
-
         </div>
     </div>
     <!-- first part start -->
