--- a/index.html
+++ b/index.html
@@ -88,9 +88,14 @@
                 <ul>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Need Help</a></li>
+                    <li><a href="#">Reviews</a></li>
+                    <li><a href="#">Questions & Answers</a></li>
                     <li><a href="#">Guide</a></li>
                     <li><a href="#">Select Language</a></li>
                 </ul>
+                <hr>
+                <h1>Concact Us</h1>
+                <p></p>
             </div>
         </div>
     </div>
