--- a/index.html
+++ b/index.html
@@ -44,20 +44,24 @@
         </div>
     </div>
     <div class="wrapper">
+        <div class="menu-dot">
+            <img src="images/icons8-circled-menu-30.png" alt="">
+        </div>
         <nav>
-            <div class="menu">
-                <div class="menu-dot">
-                    <img src="images/icons8-circled-menu-30.png" alt="">
-                </div>
-                <ul>
-                    <li><a href="#">Caregories</a></li>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Brands</a></li>
-                    <li><a href="#">Gaming</a></li>
-                    <li><a href="#">Components</a></li>
-                    <li><a href="#">PC builds</a></li>
-                </ul>
-            </div>
+            <ul>
+                <li><a href="#">Caregories</a></li>
+                <li><a href="#">Home</a></li>
+                <li>
+                    <a href="#">Brands</a>
+                    <div class="magamenu1">
+
+                    </div>
+                </li>
+                <div class="magamenu1"></div>
+                <li><a href="#">Gaming</a></li>
+                <li><a href="#">Components</a></li>
+                <li><a href="#">PC builds</a></li>
+            </ul>
         </nav>
     </div>
     <div class="slideber" id="slideber">
