--- a/index.html
+++ b/index.html
@@ -13,20 +13,13 @@
 <body>
     <!-- nevber start -->
     <div class="first-part">
-        <div class="menu-icon" id="menu-icon" onclick="slide()">
+        <div class="menu-icon" id="menuicon" onclick="slide()">
             <span></span>
             <span></span>
             <span></span>
         </div>
         <div class="logo">
             <a href="index.html"><img src="images/Background.png" alt="logo"></a>
-        </div>
-        <div class="searchbar">
-            <form>
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Search..">
-                <button type="submit" class="searchbar-btn">Search</button>
-            </form>
         </div>
         <div class="icon-part1">
             <div class="uicon">
@@ -49,19 +42,60 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Caregories</a></li>
+                <li id="cat"><a href="#">Categories</a></li>
                 <li><a href="#">Home</a></li>
+                <li><a href="#">Brands</a></li>
                 <li>
-                    <a href="#">Brands</a>
+                    <a href="#">Gaming</a>
                     <div class="magamenu1">
-
+                        <div class="magamenu1-item1">
+                            <h3>GAMING MOUSE</h3>
+                            <ul>
+                                <li><a href="">Wireless Mouse</a></li>
+                                <li><a href="">Wire Mouse</a></li>
+                                <li><a href="">Bluetooth Mouse</a></li>
+                                <li><a href="">Wireless + Bluetooth Mouse</a></li>
+                            </ul>
+                        </div>
+                        <div class="magamenu1-item1">
+                            <h3>GAMING KEYBOARD</h3>
+                            <ul>
+                                <li><a href="">Wireless Keyboard</a></li>
+                                <li><a href="">Wire Keyboard</a></li>
+                                <li><a href="">Bluetooth Keyboard</a></li>
+                                <li><a href="">Wireless + Bluetooth Keyboard</a></li>
+                            </ul>
+                        </div>
+                        <div class="magamenu1-item1">
+                            <h3>GAMING HEADPHONES</h3>
+                            <ul>
+                                <li><a href="">Wireless Headset</a></li>
+                                <li><a href="">Wire Headset</a></li>
+                                <li><a href="">Bluetooth Headset</a></li>
+                                <li><a href="">Wireless + Bluetooth Headset</a></li>
+                            </ul>
+                        </div>
+                        <div class="magamenu1-item1">
+                            <h3>GAMING MOUSEPADS</h3>
+                            <ul>
+                                <li><a href="">Small Mousepad</a></li>
+                                <li><a href="">Medium Mousepad</a></li>
+                                <li><a href="">Large Mousepad</a></li>
+                                <li><a href="">XL Mousepad</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </li>
-                <div class="magamenu1"></div>
-                <li><a href="#">Gaming</a></li>
                 <li><a href="#">Components</a></li>
                 <li><a href="#">PC builds</a></li>
             </ul>
+            <div class="searchbar">
+                <form>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" placeholder="Search..">
+                    <button type="submit" class="searchbar-btn">Search</button>
+                </form>
+            </div>
         </nav>
     </div>
     <div class="slideber" id="slideber">
