--- a/index.html
+++ b/index.html
@@ -147,15 +147,73 @@
             </div>
         </div>
     </div>
-    <!-- first part start -->
-    <div class="part1">
-        <div class="s1">
-
+    <div class="slide-container">
+        <div class="slide fade">
+            <img src="images/Poster1.jpg" alt="" width="100%" height="400px">
         </div>
-        <div class="s2">
-
+        <div class="slide fade">
+            <img src="images/Poster2.jpg" alt="" width="100%" height="400px">
         </div>
+        <div class="slide fade">
+            <img src="images/Poster3.jpg" alt="" width="100%" height="400px">
+        </div>
+        <div class="slide fade">
+            <img src="images/Poster4.jpg" alt="" width="100%" height="400px">
+        </div>
+        <span class="arrow prev" onclick="controller(-1)">&#10094;</span>
+        <span class="arrow next" onclick="controller(1)">&#10095;</span>
     </div>
+    <!-- <section class="sliding-bar">
+        <div class="slide1">
+            <img src="images/Poster1.jpg" alt="">
+        </div>
+        <div class="slide1">
+            <img src="images/Poster2.jpg" alt="">
+        </div>
+        <div class="slide1">
+            <img src="images/Poster3.jpg" alt="">
+        </div>
+        <div class="slide1">
+            <img src="images/Poster4.jpg" alt="">
+        </div>
+        <span class="prv arrow" onclick="prv(-1)">&#10094;</span>
+        <span class="next arrow" onclick="prv(1)">&#10095;</span>
+    </section> -->
+    <!-- <div class="slider">
+        <div class="showimg">
+            <span class="arrow left">&#10094;</span>
+        </div>
+        <div class="slider-image">
+            <img src="images/Poster1.jpg" alt="">
+            <img src="images/Poster2.jpg" alt="">
+            <img src="images/Poster3.jpg" alt="">
+            <img src="images/Poster4.jpg" alt="">
+        </div>
+        <div class="showimg">
+            <span class="arrow right">&#10095;</span>
+        </div>
+    </div> -->
+    <!-- first part start -->
+    <section class="layout">
+        <div class="poster-main">
+            <img src="images/2.webp" alt="">
+        </div>
+        <div class="poster-main">
+            <img src="images/4.webp" alt="">
+        </div>
+        <div class="poster-main">
+            <img src="images/6.webp" alt="">
+        </div>
+        <div class="poster-main">
+            <img src="images/GamingPC.webp" alt="">
+        </div>
+        <div class="poster-main">
+            <img src="images/GamingPC.webp" alt="">
+        </div>
+        <div class="poster-main">
+            <img src="images/GamingPC.webp" alt="">
+        </div>
+    </section>
 </body>
 <script src="script.js"></script>
 
