--- a/index.html
+++ b/index.html
@@ -147,7 +147,33 @@
             </div>
         </div>
     </div>
-    <div class="slide-container">
+    <div class="slideshow-container">
+        <div class="mySlides fade">
+            <img src="images/Poster1.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="images/Poster2.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+            <img src="images/Poster3.jpg" style="width:100%">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/Poster4.jpg" style="width:100%">
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+    <!-- <div class="slide-container">
         <div class="slide fade">
             <img src="images/Poster1.jpg" alt="" width="100%" height="400px">
         </div>
@@ -162,7 +188,7 @@
         </div>
         <span class="arrow prev" onclick="controller(-1)">&#10094;</span>
         <span class="arrow next" onclick="controller(1)">&#10095;</span>
-    </div>
+    </div> -->
     <!-- <section class="sliding-bar">
         <div class="slide1">
             <img src="images/Poster1.jpg" alt="">
