--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="menu-dot">
             <img src="images/icons8-circled-menu-30.png" alt="">
         </div>
-        <nav>
+        <nav id="nav">
             <ul>
                 <li id="cat"><a href="#">Categories</a></li>
                 <li><a href="#">Home</a></li>
@@ -161,6 +161,12 @@
         </div>
         <div class="mySlides fade">
             <img src="images/Poster4.jpg" style="width:100%">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/Poster6.jpg" style="width:100%">
+        </div>
+        <div class="mySlides fade">
+            <img src="images/Poster7.jpg" style="width:100%">
         </div>
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
