--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
         <div class="mySlides fade">
             <img src="images/Poster7.jpg" style="width:100%">
         </div>
+        <div class="mySlides fade">
+            <img src="images/poster9.webp" style="width:100%">
+        </div>
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
 
@@ -245,6 +248,15 @@
         <div class="poster-main">
             <img src="images/GamingPC.webp" alt="">
         </div>
+    </section>
+    <section class="intel-section">
+        <div class="ad">
+            <img src="images/Intel-CML-S-Family_678x452.jpg" alt="">
+        </div>
+        <div class="product">
+
+        </div>
+
     </section>
 </body>
 <script src="script.js"></script>
