--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             </div>
         </div>
     </div>
+    <!-- poster slider start -->
     <div class="slideshow-container">
         <div class="mySlides fade">
             <img src="images/Poster1.jpg" style="width:100%">
@@ -183,53 +184,7 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
     </div>
-    <!-- <div class="slide-container">
-        <div class="slide fade">
-            <img src="images/Poster1.jpg" alt="" width="100%" height="400px">
-        </div>
-        <div class="slide fade">
-            <img src="images/Poster2.jpg" alt="" width="100%" height="400px">
-        </div>
-        <div class="slide fade">
-            <img src="images/Poster3.jpg" alt="" width="100%" height="400px">
-        </div>
-        <div class="slide fade">
-            <img src="images/Poster4.jpg" alt="" width="100%" height="400px">
-        </div>
-        <span class="arrow prev" onclick="controller(-1)">&#10094;</span>
-        <span class="arrow next" onclick="controller(1)">&#10095;</span>
-    </div> -->
-    <!-- <section class="sliding-bar">
-        <div class="slide1">
-            <img src="images/Poster1.jpg" alt="">
-        </div>
-        <div class="slide1">
-            <img src="images/Poster2.jpg" alt="">
-        </div>
-        <div class="slide1">
-            <img src="images/Poster3.jpg" alt="">
-        </div>
-        <div class="slide1">
-            <img src="images/Poster4.jpg" alt="">
-        </div>
-        <span class="prv arrow" onclick="prv(-1)">&#10094;</span>
-        <span class="next arrow" onclick="prv(1)">&#10095;</span>
-    </section> -->
-    <!-- <div class="slider">
-        <div class="showimg">
-            <span class="arrow left">&#10094;</span>
-        </div>
-        <div class="slider-image">
-            <img src="images/Poster1.jpg" alt="">
-            <img src="images/Poster2.jpg" alt="">
-            <img src="images/Poster3.jpg" alt="">
-            <img src="images/Poster4.jpg" alt="">
-        </div>
-        <div class="showimg">
-            <span class="arrow right">&#10095;</span>
-        </div>
-    </div> -->
-    <!-- first part start -->
+    <!-- add poster start-->
     <section class="layout">
         <div class="poster-main">
             <img src="images/2.webp" alt="">
@@ -250,24 +205,41 @@
             <img src="images/GamingPC.webp" alt="">
         </div>
     </section>
-    <div class="slider" id="slider">
-        <div class="slide" id="slide">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product1">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product1">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product1">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product1">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product2">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product2">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product2">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product2">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product3">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product3">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product3">
-            <img class="item" src="http://via.placeholder.com/200x200?text=Product3">
+    <!-- intel processor porduct start -->
+    <section class="productH">
+        <div class="productA">
+            <img src="images/Intel-CML-S-Family_678x452.jpg" alt="">
         </div>
-        <button class="ctrl-btn pro-prev">Prev</button>
-        <button class="ctrl-btn pro-next">Next</button>
-    </div>
+        <div class="productS">
+            <div class="proT">
+                <h3 class="title">New Products
+                </h3>
+                <div class="proT-nav">
+                    <ul class="section-tab-nav tab-nav">
+                        <li>
+                            <a data-toggle="tab" href="#tab1">Laptops
+                            </a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#tab1">Smartphones
+                            </a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#tab1">Cameras
+                            </a>
+                        </li>
+                        <li class="active">
+                            <a data-toggle="tab" href="#tab1">Accessories
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="pros">
+                
+            </div>
+        </div>
+    </section>
 </body>
 <script src="script.js"></script>
 <script src="ps.js"></script>
