--- a/index.html
+++ b/index.html
@@ -210,34 +210,8 @@
         <div class="productA">
             <img src="images/Intel-CML-S-Family_678x452.jpg" alt="">
         </div>
-        <div class="productS">
-            <div class="proT">
-                <h3 class="title">New Products
-                </h3>
-                <div class="proT-nav">
-                    <ul class="section-tab-nav tab-nav">
-                        <li>
-                            <a data-toggle="tab" href="#tab1">Laptops
-                            </a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#tab1">Smartphones
-                            </a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#tab1">Cameras
-                            </a>
-                        </li>
-                        <li class="active">
-                            <a data-toggle="tab" href="#tab1">Accessories
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="pros">
-                
-            </div>
+        <div class="productB">
+            
         </div>
     </section>
 </body>
