--- a/index.html
+++ b/index.html
@@ -211,7 +211,27 @@
             <img src="images/Intel-CML-S-Family_678x452.jpg" alt="">
         </div>
         <div class="productB">
-            
+            <div class="productB-header">
+                <div class="productB-header-logo">
+                    <img src="images/logo-classicblue-3000px-OneTrust.png" alt="">
+                </div>
+                <div class="productB-header-menus">
+                    <ul class="section-tab-nav">
+                        <li class="active">
+                            <a data-toggle="tab" href="#tab1">intel i3</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#tab1">intel i5</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#tab1">intel i7</a>
+                        </li>
+                        <li>
+                            <a data-toggle="tab" href="#tab1">intel i9</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
 </body>
