--- a/index.html
+++ b/index.html
@@ -217,22 +217,21 @@
                 </div>
                 <div class="productB-header-menus">
                     <ul class="section-tab-nav">
-                        <li class="active">
-                            <a data-toggle="tab" href="#tab1">intel i3</a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#tab1">intel i5</a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#tab1">intel i7</a>
-                        </li>
-                        <li>
-                            <a data-toggle="tab" href="#tab1">intel i9</a>
-                        </li>
+                        <li class="active2"><a href="#d" class="lll" onclick="intelslide(1)">intel i3</a></li>
+                        <li><a href="#a" class="lll" onclick="intelslide(2)">intel i5</a></li>
+                        <li><a href="#s" class="lll" onclick="intelslide(3)">intel i7</a></li>
+                        <li><a href="#akl" class="lll" onclick="intelslide(4)">intel i9</a></li>
                     </ul>
                 </div>
             </div>
+            <div class="productB-pro">
+                <div class="productB-slider" id="intel-i3">kjdvgdfkjs</div>
+                <div class="productB-slider" id="intel-i5">dgfhgfhhfn</div>
+                <div class="productB-slider" id="intel-i7">fsghgfhghfh</div>
+                <div class="productB-slider" id="intel-i9">kkkdhshgfhh</div>
+            </div>
         </div>
+
     </section>
 </body>
 <script src="script.js"></script>
