--- a/index.html
+++ b/index.html
@@ -161,18 +161,6 @@
         <div class="mySlides fade">
             <img src="images/Poster3.jpg" style="width:100%">
         </div>
-        <div class="mySlides fade">
-            <img src="images/Poster4.jpg" style="width:100%">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/Poster6.jpg" style="width:100%">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/Poster7.jpg" style="width:100%">
-        </div>
-        <div class="mySlides fade">
-            <img src="images/poster9.webp" style="width:100%">
-        </div>
         <a class="prev" onclick="plusSlides(-1)">❮</a>
         <a class="next" onclick="plusSlides(1)">❯</a>
 
@@ -225,8 +213,40 @@
                 </div>
             </div>
             <div class="productB-pro">
-                <div class="productB-slider" id="intel-i3">kjdvgdfkjs</div>
-                <div class="productB-slider" id="intel-i5">dgfhgfhhfn</div>
+                <div class="productB-slider" id="intel-i3">
+                    <div class="intel-i3-1">
+                        <div class="intel-i3-1-img">
+                            <img src="images/i3-7100-4-270x270.jpg" alt="">
+                        </div>
+                        <span class="stock">Stock &#10004;</span>
+                        <p class="product-name">Intel i3 13100h 13Gen processor</p>
+                        <del>
+                            <span class="amount">€3500</span>
+                        </del>
+                        <span class="productB-slider-discount">20% off</span>
+                        <ins>
+                            <span class="amount">€1849</span>
+                        </ins>
+                        <button class="cart">ADD to CART</button>
+                    </div>
+                </div>
+                <div class="productB-slider" id="intel-i5">
+                    <!-- <div class="intel-i3-1">
+                        <div class="intel-i3-1-img">
+                            <img src="images/i3-7100-4-270x270.jpg" alt="">
+                        </div>
+                        <span class="stock">Stock &#10004;</span>
+                        <p class="product-name">Intel i3 13100h 13Gen processor</p>
+                        <del>
+                            <span class="amount">€3500</span>
+                        </del>
+                        <span class="productB-slider-discount">20% off</span>
+                        <ins>
+                            <span class="amount">€1849</span>
+                        </ins>
+                        <button class="cart">ADD to CART</button>
+                    </div> -->
+                </div>
                 <div class="productB-slider" id="intel-i7">fsghgfhghfh</div>
                 <div class="productB-slider" id="intel-i9">kkkdhshgfhh</div>
             </div>
