--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/fa32beba61.js" crossorigin="anonymous"></script>
     <title>Document</title>
@@ -213,40 +215,121 @@
                 </div>
             </div>
             <div class="productB-pro">
+                <span class="arr left">&#139;</span>
+                <span class="arr right">&#155;</span>
                 <div class="productB-slider" id="intel-i3">
-                    <div class="intel-i3-1">
-                        <div class="intel-i3-1-img">
-                            <img src="images/i3-7100-4-270x270.jpg" alt="">
+                    <section class="holesys">
+                        <div class="product">
+                            <div class="badge">20% off</div>
+                            <div class="product-tumb">
+                                <img src="image/feature_3.png" alt="">
+                            </div>
+                            <div class="product-details">
+                                <span class="product-catagory">Processor</span>
+                                <h4><a href="">INTEL I3</a></h4>
+                                <p>Intel Core i3 12100F 12th Gen Generation Desktop PC Processor</p>
+                                <div class="product-bottom-details">
+                                    <div class="product-price"><small>$96.00</small>$230.99</div>
+                                    <div class="product-links">
+                                        <button>ADD TO CART <i class="fa fa-shopping-cart"></i></button>
+                                        <!-- <a href="">ADD TO CART</a> -->
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <span class="stock">Stock &#10004;</span>
-                        <p class="product-name">Intel i3 13100h 13Gen processor</p>
-                        <del>
-                            <span class="amount">€3500</span>
-                        </del>
-                        <span class="productB-slider-discount">20% off</span>
-                        <ins>
-                            <span class="amount">€1849</span>
-                        </ins>
-                        <button class="cart">ADD to CART</button>
-                    </div>
-                </div>
-                <div class="productB-slider" id="intel-i5">
-                    <!-- <div class="intel-i3-1">
-                        <div class="intel-i3-1-img">
-                            <img src="images/i3-7100-4-270x270.jpg" alt="">
+                        <div class="product">
+                            <div class="badge">20% off</div>
+                            <div class="product-tumb">
+                                <img src="image/feature_3.png" alt="">
+                            </div>
+                            <div class="product-details">
+                                <span class="product-catagory">Processor</span>
+                                <h4><a href="">INTEL I3</a></h4>
+                                <p>Intel Core i3 12100F 12th Gen Generation Desktop PC Processor</p>
+                                <div class="product-bottom-details">
+                                    <div class="product-price"><small>$96.00</small>$230.99</div>
+                                    <div class="product-links">
+                                        <button>ADD TO CART <i class="fa fa-shopping-cart"></i></button>
+                                        <!-- <a href="">ADD TO CART</a> -->
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <span class="stock">Stock &#10004;</span>
-                        <p class="product-name">Intel i3 13100h 13Gen processor</p>
-                        <del>
-                            <span class="amount">€3500</span>
-                        </del>
-                        <span class="productB-slider-discount">20% off</span>
-                        <ins>
-                            <span class="amount">€1849</span>
-                        </ins>
-                        <button class="cart">ADD to CART</button>
-                    </div> -->
+                        <div class="product">
+                            <div class="badge">20% off</div>
+                            <div class="product-tumb">
+                                <img src="image/feature_3.png" alt="">
+                            </div>
+                            <div class="product-details">
+                                <span class="product-catagory">Processor</span>
+                                <h4><a href="">INTEL I3</a></h4>
+                                <p>Intel Core i3 12100F 12th Gen Generation Desktop PC Processor</p>
+                                <div class="product-bottom-details">
+                                    <div class="product-price"><small>$96.00</small>$230.99</div>
+                                    <div class="product-links">
+                                        <button>ADD TO CART <i class="fa fa-shopping-cart"></i></button>
+                                        <!-- <a href="">ADD TO CART</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="badge">20% off</div>
+                            <div class="product-tumb">
+                                <img src="image/feature_3.png" alt="">
+                            </div>
+                            <div class="product-details">
+                                <span class="product-catagory">Processor</span>
+                                <h4><a href="">INTEL I3</a></h4>
+                                <p>Intel Core i3 12100F 12th Gen Generation Desktop PC Processor</p>
+                                <div class="product-bottom-details">
+                                    <div class="product-price"><small>$96.00</small>$230.99</div>
+                                    <div class="product-links">
+                                        <button>ADD TO CART <i class="fa fa-shopping-cart"></i></button>
+                                        <!-- <a href="">ADD TO CART</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="badge">20% off</div>
+                            <div class="product-tumb">
+                                <img src="image/feature_3.png" alt="">
+                            </div>
+                            <div class="product-details">
+                                <span class="product-catagory">Processor</span>
+                                <h4><a href="">INTEL I3</a></h4>
+                                <p>Intel Core i3 12100F 12th Gen Generation Desktop PC Processor</p>
+                                <div class="product-bottom-details">
+                                    <div class="product-price"><small>$96.00</small>$230.99</div>
+                                    <div class="product-links">
+                                        <button>ADD TO CART <i class="fa fa-shopping-cart"></i></button>
+                                        <!-- <a href="">ADD TO CART</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="product">
+                            <div class="badge">20% off</div>
+                            <div class="product-tumb">
+                                <img src="image/feature_3.png" alt="">
+                            </div>
+                            <div class="product-details">
+                                <span class="product-catagory">Processor</span>
+                                <h4><a href="">INTEL I3</a></h4>
+                                <p>Intel Core i3 12100F 12th Gen Generation Desktop PC Processor</p>
+                                <div class="product-bottom-details">
+                                    <div class="product-price"><small>$96.00</small>$230.99</div>
+                                    <div class="product-links">
+                                        <button>ADD TO CART <i class="fa fa-shopping-cart"></i></button>
+                                        <!-- <a href="">ADD TO CART</a> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
                 </div>
+                <div class="productB-slider" id="intel-i5">ehhsjrjrjrj</div>
                 <div class="productB-slider" id="intel-i7">fsghgfhghfh</div>
                 <div class="productB-slider" id="intel-i9">kkkdhshgfhh</div>
             </div>
@@ -255,7 +338,7 @@
     </section>
 </body>
 <script src="script.js"></script>
-<script src="ps.js"></script>
+<script type="text/javascript" src="productslide.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
 </html>
