--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <!-- intel processor porduct start -->
     <section class="productH">
         <div class="productA">
-            <img src="images/Intel-CML-S-Family_678x452.jpg" alt="">
+            <img src="images/7.webp" alt="">
         </div>
         <div class="productB">
             <div class="productB-header">
@@ -222,7 +222,7 @@
                         <div class="product">
                             <div class="badge">20% off</div>
                             <div class="product-tumb">
-                                <img src="image/feature_3.png" alt="">
+                                <img src="images/amd-ryzen-9.webp" alt="">
                             </div>
                             <div class="product-details">
                                 <span class="product-catagory">Processor</span>
@@ -304,7 +304,6 @@
                                     <div class="product-price"><small>$96.00</small>$230.99</div>
                                     <div class="product-links">
                                         <button>ADD TO CART <i class="fa fa-shopping-cart"></i></button>
-                                        <!-- <a href="">ADD TO CART</a> -->
                                     </div>
                                 </div>
                             </div>
@@ -322,7 +321,6 @@
                                     <div class="product-price"><small>$96.00</small>$230.99</div>
                                     <div class="product-links">
                                         <button>ADD TO CART <i class="fa fa-shopping-cart"></i></button>
-                                        <!-- <a href="">ADD TO CART</a> -->
                                     </div>
                                 </div>
                             </div>
@@ -334,7 +332,9 @@
                 <div class="productB-slider" id="intel-i9">kkkdhshgfhh</div>
             </div>
         </div>
-
+    </section>
+    <section class="poster-2nd">
+        <img src="images/poster9.webp" alt="">
     </section>
 </body>
 <script src="script.js"></script>
