--- a/index.html
+++ b/index.html
@@ -334,7 +334,12 @@
         </div>
     </section>
     <section class="poster-2nd">
-        <img src="images/poster9.webp" alt="">
+        <div class="poster-2nd-img pi1">
+            <img src="images/AEGB-Cases.webp" alt="" style="width:100%">
+        </div>
+        <div class="poster-2nd-img pi2">
+            <img src="images/800x300.webp" alt="" style="width:100%">
+        </div>
     </section>
 </body>
 <script src="script.js"></script>
