--- a/index.html
+++ b/index.html
@@ -177,22 +177,22 @@
     <!-- add poster start-->
     <section class="layout">
         <div class="poster-main">
-            <img src="images/2.webp" alt="">
+            <img src="images/2.webp" alt="" style="width: 100%;">
         </div>
         <div class="poster-main">
-            <img src="images/4.webp" alt="">
+            <img src="images/4.webp" alt="" style="width: 100%;">
         </div>
         <div class="poster-main">
-            <img src="images/6.webp" alt="">
+            <img src="images/6.webp" alt="" style="width: 100%;">
         </div>
         <div class="poster-main">
-            <img src="images/GamingPC.webp" alt="">
+            <img src="images/GamingPC.webp" alt="" style="width: 100%;">
         </div>
         <div class="poster-main">
-            <img src="images/GamingPC.webp" alt="">
+            <img src="images/GamingPC.webp" alt="" style="width: 100%;">
         </div>
         <div class="poster-main">
-            <img src="images/GamingPC.webp" alt="">
+            <img src="images/GamingPC.webp" alt="" style="width: 100%;">
         </div>
     </section>
     <!-- intel processor porduct start -->
